[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gistrun"
dynamic = ["version"]
description = ''
readme = "docs/README.rst"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [{ name = "drengskapur", email = "service@drengskapur.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["click==8.1.7", "requests==2.31.0"]

[project.urls]
Documentation = "https://github.com/drengskapur/gistrun#readme"
Issues = "https://github.com/drengskapur/gistrun/issues"
Source = "https://github.com/drengskapur/gistrun"

[project.scripts]
gistrun = "gistrun.cli:gistrun"

[tool.hatch.version]
path = "src/gistrun/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest==8.1.1", "pycryptodome==3.4.3"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gistrun tests}"

[tool.coverage.run]
source_pkgs = ["gistrun", "tests"]
branch = true
parallel = true
omit = ["src/gistrun/__about__.py"]

[tool.coverage.paths]
gistrun = ["src/gistrun", "*/src/gistrun"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
